feat: ui skeleton and spinner

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -66,6 +66,14 @@
         <i-lucide [img]="Bell" class="nav-icon"></i-lucide>
         Toast
       </a>
+      <a routerLink="/skeleton" routerLinkActive="active">
+        <i-lucide [img]="Layout" class="nav-icon"></i-lucide>
+        Skeleton
+      </a>
+      <a routerLink="/spinner" routerLinkActive="active">
+        <i-lucide [img]="Loader2" class="nav-icon"></i-lucide>
+        Spinner
+      </a>
     </nav>
 
 
