feat: dialog demo

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -59,8 +59,12 @@
         Pagination
       </a>
       <a routerLink="/popover" routerLinkActive="active">
-        <i-lucide [img]="MessageSquare" class="nav-icon"></i-lucide>
+        <i-lucide [img]="MessageCircle" class="nav-icon"></i-lucide>
         Popover
+      </a>
+      <a routerLink="/popup" routerLinkActive="active">
+        <i-lucide [img]="MessageSquare" class="nav-icon"></i-lucide>
+        Popup & Dialog
       </a>
       <a routerLink="/toast" routerLinkActive="active">
         <i-lucide [img]="Bell" class="nav-icon"></i-lucide>
